--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "client:preview": "cd client && npm run preview"
   },
   "devDependencies": {
-    "ts-node": "10.9.2",
-    "typescript": "^5.1.3"
+    "@types/node": "^24.0.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "axios": "^1.10.0"
   }
 }
